# Copyright 2012 Christian Eder
# 
# This file is part of XALLOC, licensed under the GNU General Public
# License version 3. See COPYING for more information.

INCLUDES=-I$(top_srcdir) -I$(top_builddir)
EXTRA_DIST = \
	test.matrix			\
	sms.matrix			\
	matrix-market-array.matrix	\
	maple-sparse1.matrix		\
	maple-dense1.matrix		\
	generic-dense.matrix		\
	sparse-row.matrix		\
	matrix-market-coordinate.matrix
